
[project]
name = "recruit_tracker_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden Pyles", email = "jpyles@uab.edu"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "openai>=1.13.3",
    "requests>=2.31.0",
    "pymongo>=4.6.2",
    "bcrypt>=4.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
