
[project]
name = "recruit_tracker_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden Pyles", email = "jpyles@uab.edu"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "openai>=1.13.3",
    "requests>=2.31.0",
    "pymongo>=4.6.2",
    "bcrypt>=4.1.2",
    "jwt>=1.3.1",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "fitz>=0.0.1.dev2",
    "PyMuPDF>=1.23.26",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
